# informixdb

./: COPYRIGHT  MANIFEST  README  README.md  configure.in  informixdb.py  setup.py  setup.py.in  winbuild.bat
doc/: Makefile  informixdb.css  manual.txt
ext/: _informixdb.ec  datetime-compat.h  dbi.c  dbi.h
tests/: dbapi20.py  testdbapi.py
