AC_INIT(informixdb.py)

AC_PATH_PROG(PYTHON, python)

AC_SUBST(INFORMIXDIR)
AC_MSG_CHECKING(for --with-informix)
AC_ARG_WITH(informix,
[  --with-informix=DIR     look for INFORMIX-ESQL/C in specified
                          directory [${INFORMIXDIR-/usr/informix}]],
INFORMIXDIR=$withval
, : ${INFORMIXDIR=/usr/informix})
AC_MSG_RESULT($INFORMIXDIR)

AC_PATH_PROG(ESQL, esql)

if test "X$ESQL" = "X"
then
    AC_ERROR([Can't find esql. Please make sure that INFORMIXDIR is set correctly and that \$INFORMIXDIR/bin is in your PATH.])
fi

ESQLDEFS=
AC_SUBST(THREAD)
AC_SUBST(THREADLIB)
AC_MSG_CHECKING(for --enable-thread)
AC_ARG_ENABLE(thread,
[  --enable-thread=LIB     enable use of thread-safe INFORMIX with
                          specified thread library],
if test "$enableval" != no; then
  THREAD=-thread
  ESQLDEFS="IFX_THREAD _REENTRANT"
  THREADLIB="$enableval"
fi, enableval=no)
AC_MSG_RESULT($enableval)

AC_MSG_CHECKING(for --enable-shared)
AC_ARG_ENABLE(shared,
[  --disable-shared        disable use of INFORMIX shared libraries],
if test "$enableval" = no; then STATIC=-static; fi, enableval=yes)
AC_MSG_RESULT($enableval)

AC_SUBST(ESQLLIBS)
AC_SUBST(ESQLDEFS)
ESQLLIBS=`INFORMIXDIR=$INFORMIXDIR THREADLIB=$THREADLIB $ESQL $THREAD $STATIC -libs`
# this converts the newlines to spaces
ESQLLIBS=`echo $ESQLLIBS`

AC_OUTPUT(setup.py)
echo "creating _informixdb.c"
cd ext
INFORMIXDIR=$INFORMIXDIR THREADLIB=$THREADLIB $ESQL $THREAD $STATIC -e _informixdb.ec
cd ..
